# qm-pka

./: .gitignore  README.md  pixi.toml  pyproject.toml  training_set.csv
examples/: aminobutanol_crest_psi4.toml  aminobutanol_crest_pyscf.toml  aminobutanol_rdkit_psi4.toml  aminobutanol_rdkit_pyscf.toml  glycine_psi4.toml  glycine_pyscf.toml
qm_pka/: __init__.py  charge_enumeration.py  config.py  crest_runner.py  ensemble.py  pipeline.py  psi4_runner.py  pyscf_runner.py  rdkit_utils.py  refinement.py  sampling.py  scoring.py  stereo.py  tautomer_dedup.py  thermo.py  types.py  xtb_runner.py  xyz_io.py
scripts/: approach1_rdkit_first.py  approach2_crest_first.py  run_pipeline.py  run_training_set.py  select_training_set.py
tests/: test_charge_enumeration.py  test_config.py  test_ensemble.py  test_psi4_runner.py  test_pyscf_runner.py  test_rdkit_utils.py  test_stereo.py  test_tautomer_dedup.py  test_thermo.py  test_types.py  test_xyz_io.py
