[project]
name = "qm-pka"
version = "0.1.0"
requires-python = ">=3.13"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["rdkit.*", "psi4.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = ["slow: marks tests that call external programs (xtb, crest)"]
